--- a/ErpPlyconverter/cfg/hijack-all.cfg
+++ b/ErpPlyconverter/cfg/hijack-all.cfg
@@ -1,7 +1,7 @@
 cfg
 format ascii 1.0
 comment This is comment
-element view 10
+element view 15
 property string depthFile
 property string textureFile
 property float T1
@@ -10,21 +10,29 @@ property float T3
 property float R1
 property float R2
 property float R3
+property string viewName
+property float W
+property float H
+property string YUVFormat
+property float bitdepth
+property float Rnear
+property float Rfar
 end_header
-E:\share\3DoF+\dataset\hijack\v2_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2_4096x4096_420_10b.yuv -0.2427 -0.1763 1.65 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs0out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs0out_4096x4096_420_10b.yuv 0.3 -0 1.65 0 -0 0 
-E:\share\3DoF+\dataset\hijack\v2vs1out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs1out_4096x4096_420_10b.yuv 0.0927 -0.2853 1.65 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs3out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs3out_4096x4096_420_10b.yuv -0.2427 0.1763 1.65 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs4out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs4out_4096x4096_420_10b.yuv 0.0927 0.2853 1.65 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs5out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs5out_4096x4096_420_10b.yuv -0.15 0 1.3902 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs6out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs6out_4096x4096_420_10b.yuv 0.15 0 1.3902 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs7out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs7out_4096x4096_420_10b.yuv -0.15 0 1.9098 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs8out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs8out_4096x4096_420_10b.yuv 0.15 0 1.9098 0 -0 0
-E:\share\3DoF+\dataset\hijack\v2vs9out_4096x4096_0_5_25_0_420_10b.yuv E:\share\3DoF+\dataset\hijack\v2vs9out_4096x4096_420_10b.yuv 0 -0 1.65 0 -0 0
-
-
-
-
+G:\3DoFplus_Sequence\A_ClassroomVideo\v0_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v0_4096x2048_420_10b_tex.yuv 0 -0 0 0 0 0 v0 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v1_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v1_4096x2048_420_10b_tex.yuv -0.0519615242 0.03 0 0 -0 0 v1 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v2_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v2_4096x2048_420_10b_tex.yuv -0.0519615242 -0.03 0 0 -0 0 v2 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v3_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v3_4096x2048_420_10b_tex.yuv 0 0.06 0 0 -0 0 v3 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v4_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v4_4096x2048_420_10b_tex.yuv 0 -0.06 0 0 -0 0 v4 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v5_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v5_4096x2048_420_10b_tex.yuv 0.0519615242 0.03 0 0 -0 0 v5 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v6_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v6_4096x2048_420_10b_tex.yuv 0.0519615242 -0.03 0 0 -0 0 v6 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v7_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v7_4096x2048_420_10b_tex.yuv 0 -0 -0.06 0 -0 0 v7 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v8_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v8_4096x2048_420_10b_tex.yuv 0 -0 0.06 0 -0 0 v8 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v9_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v9_4096x2048_420_10b_tex.yuv -0.1039230485 -0 0 0 -0 0 v9 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v10_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v10_4096x2048_420_10b_tex.yuv -0.0519615242 0.09 0 0 -0 0 v10 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v11_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v11_4096x2048_420_10b_tex.yuv -0.0519615242 -0.09 0 0 -0 0 v11 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v12_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v12_4096x2048_420_10b_tex.yuv 0.0519615242 0.09 0 0 -0 0 v12 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v13_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v13_4096x2048_420_10b_tex.yuv 0.0519615242 -0.09 0 0 -0 0 v13 4096 2048 420 10 0.5 25.0
+G:\3DoFplus_Sequence\A_ClassroomVideo\v14_4096x2048_420_10b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v14_4096x2048_420_10b_tex.yuv 0.1039230485 -0 0 0 -0 0 v14 4096 2048 420 10 0.5 25.0
 
 
 
