点云数据结构采用TMC2

--- a/ErpPlyconverter/cfg/classroom-part.cfg
+++ b/ErpPlyconverter/cfg/classroom-part.cfg
@@ -1,7 +1,7 @@
 cfg
 format ascii 1.0
 comment This is comment
-element view 15
+element view 1
 property string depthFile
 property string textureFile
 property float T1
@@ -14,7 +14,8 @@ property string viewName
 property float W
 property float H
 property string YUVFormat
-property float bitdepth
+property float textureBitdepth
+property float DepthBitdepth
 property float Rnear
 property float Rfar
 end_header
