完成ERP转球坐标

--- a/ErpPlyconverter/cfg/classroom-part.cfg
+++ b/ErpPlyconverter/cfg/classroom-part.cfg
@@ -19,21 +19,21 @@ property float DepthBitdepth
 property float Rnear
 property float Rfar
 end_header
-G:\3DoFplus_Sequence\A_ClassroomVideo\v0_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v0_4096x2048_420_10b_tex.yuv 0 -0 0 0 0 0 v0 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v1_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v1_4096x2048_420_10b_tex.yuv -0.0519615242 0.03 0 0 -0 0 v1 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v2_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v2_4096x2048_420_10b_tex.yuv -0.0519615242 -0.03 0 0 -0 0 v2 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v3_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v3_4096x2048_420_10b_tex.yuv 0 0.06 0 0 -0 0 v3 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v4_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v4_4096x2048_420_10b_tex.yuv 0 -0.06 0 0 -0 0 v4 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v5_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v5_4096x2048_420_10b_tex.yuv 0.0519615242 0.03 0 0 -0 0 v5 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v6_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v6_4096x2048_420_10b_tex.yuv 0.0519615242 -0.03 0 0 -0 0 v6 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v7_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v7_4096x2048_420_10b_tex.yuv 0 -0 -0.06 0 -0 0 v7 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v8_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v8_4096x2048_420_10b_tex.yuv 0 -0 0.06 0 -0 0 v8 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v9_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v9_4096x2048_420_10b_tex.yuv -0.1039230485 -0 0 0 -0 0 v9 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v10_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v10_4096x2048_420_10b_tex.yuv -0.0519615242 0.09 0 0 -0 0 v10 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v11_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v11_4096x2048_420_10b_tex.yuv -0.0519615242 -0.09 0 0 -0 0 v11 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v12_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v12_4096x2048_420_10b_tex.yuv 0.0519615242 0.09 0 0 -0 0 v12 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v13_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v13_4096x2048_420_10b_tex.yuv 0.0519615242 -0.09 0 0 -0 0 v13 4096 2048 420 16 10 0.8 1000.0
-G:\3DoFplus_Sequence\A_ClassroomVideo\v14_4096x2048_420_16b_dep.yuv G:\3DoFplus_Sequence\A_ClassroomVideo\v14_4096x2048_420_10b_tex.yuv 0.1039230485 -0 0 0 -0 0 v14 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v0_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v0_4096x2048_420_10b_tex.yuv 0 -0 0 0 0 0 v0 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v1_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v1_4096x2048_420_10b_tex.yuv -0.0519615242 0.03 0 0 -0 0 v1 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v2_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v2_4096x2048_420_10b_tex.yuv -0.0519615242 -0.03 0 0 -0 0 v2 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v3_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v3_4096x2048_420_10b_tex.yuv 0 0.06 0 0 -0 0 v3 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v4_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v4_4096x2048_420_10b_tex.yuv 0 -0.06 0 0 -0 0 v4 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v5_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v5_4096x2048_420_10b_tex.yuv 0.0519615242 0.03 0 0 -0 0 v5 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v6_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v6_4096x2048_420_10b_tex.yuv 0.0519615242 -0.03 0 0 -0 0 v6 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v7_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v7_4096x2048_420_10b_tex.yuv 0 -0 -0.06 0 -0 0 v7 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v8_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v8_4096x2048_420_10b_tex.yuv 0 -0 0.06 0 -0 0 v8 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v9_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v9_4096x2048_420_10b_tex.yuv -0.1039230485 -0 0 0 -0 0 v9 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v10_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v10_4096x2048_420_10b_tex.yuv -0.0519615242 0.09 0 0 -0 0 v10 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v11_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v11_4096x2048_420_10b_tex.yuv -0.0519615242 -0.09 0 0 -0 0 v11 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v12_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v12_4096x2048_420_10b_tex.yuv 0.0519615242 0.09 0 0 -0 0 v12 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v13_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v13_4096x2048_420_10b_tex.yuv 0.0519615242 -0.09 0 0 -0 0 v13 4096 2048 420 16 10 0.8 1000.0
+W:\3DoFplus_Sequence\A_ClassroomVideo\v14_4096x2048_420_16b_dep.yuv W:\3DoFplus_Sequence\A_ClassroomVideo\v14_4096x2048_420_10b_tex.yuv 0.1039230485 -0 0 0 -0 0 v14 4096 2048 420 16 10 0.8 1000.0
 
 
 
